Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -609,3 +609,115 @@ Hence, $a_{m,1}=a_{1,1}+2(1+2+\cdots+m-1)=1+(m-1)m$. Now, we free the values of 
 Hence, $a_{m,n}=a_{m,1}-2(1+2+3+\cdots+n-1)=1+(m-1)m-(n-1)n=2023$.\\
 This implies $m^2-m-n^2+n=2022$, so $(m-n)(m+n)-(m-n)=2022$. Therefore, $(m-n)(m+n-1)=2022$. Since the difference between $m-n$ and $m+n-1$ is $2n-1$, the parity must be different. Also, since $n\geq 1$, $2n-1\geq1$. This implies that $m-n<m+n-1$. Furthermore, $m+n-1>0$ implies that $m-n>0$. Thus, $(m-n,m+n-1)=(1,2022)$, $(2,1011)$, $(3,674)$ and $(6,337)$. Since there are $4$ different pairs for $(m-n,m+n-1)$, there must be $4$ different pairs for $(m,n)$, by one-to-one correspondence.
 \end{solution}
+
+\begin{problem}
+Alice likes riding a sleigh in winter. As the lift is broken, she walks up to the top of a hill at the rate of $2$ kilometers per hour, and comes down the hill at $10$ kilometers per hour. Ignoring any time spent as she prepares to ride a sleigh on top of a hill, the average speed of the round trip, in kilometers per hour, can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime integers. Compute $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $13$.
+\end{solution}
+
+\begin{problem}
+Two concentric circles of radius $10$ and $12$ are drawn in a plane. A chord of the larger circle is tangent to the smaller circle. If the length of the chord can be written as $\sqrt{p}$ where $p$ is a composite number, compute $p$.
+\end{problem}
+
+\begin{solution}
+The answer is $44$.
+\end{solution}
+
+\begin{problem}
+If the square of the length of circumradius of a triangle with integer sides of length $11$, $12$, and $13$ can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime integers, compute the value of $n$.
+\end{problem}
+
+\begin{solution}
+The answer is $70$.
+\end{solution}
+
+\begin{problem}
+A round-table with 12 equally-spaced seats is to be filled with people whose label-tags start from $1$ to $12$. If the sum of the label-tags on each person on every three consecutive seats is divisible by $3$, then the number of acceptable arrangements of all 12 people around the round table, assuming that two arrangements are considered \underline{distinct} even if one can be obtained from the other by rotating the table, can be computed as $N$. Find the sum of its digits.
+\end{problem}
+
+\begin{solution}
+The answer is $16$.
+\end{solution}
+
+\begin{problem}
+If $\overline{ABBC}$, a four-digit number divisible by $4$, satisfies the following condition $A\neq B \neq C$, compute the number of such $\overline{ABBC}$.
+\end{problem}
+
+\begin{solution}
+The answer is $160$.
+\end{solution}
+
+\begin{problem}
+If all positive integers are written in successive manner, i.e., \[123456789101112\cdots\] compute the digit that appears in $2022$nd position.
+\end{problem}
+
+\begin{solution}
+The answer is $0$.
+\end{solution}
+
+\begin{problem}
+If a circle is inscribed in a square whose sides are $10$, let there be a right isosceles triangle whose vertex is on top-right corner of a square such that its hypotenuse is tangent to the circle. If the side length of the right isosceles triangle can be written as $p-q\sqrt{r}$, where $p$, $q$, and $r$ are positive integers and $r$ is square-free, find $p+q+r$.
+\end{problem}
+
+\begin{solution}
+The answer is $17$.
+\end{solution}
+
+\begin{problem}
+If a quartic polynomial $x^4+\cdots+337x^2+\cdots+13$ can be factorized into $(x^2+ax+b)(x^2+cx+d)$ where $a$, $b$, $c$, and $d$ are non-composite positive integers, compute the sum of $a$ and $c$. (Here, non-composite integers consist of either $1$ or primes.)
+\end{problem}
+
+\begin{solution}
+The answer is $321$.
+\end{solution}
+
+\begin{problem}
+$ \circled{B} \hfill \circled {B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{B} \hfill \circled{B}$ shows what happens if $8$ black marbles and $3$ white marbles are to be arranged in a row. Let $p$ be the probability that every white marble are always adjacent to black marbles to their left and right. If $p=\frac{m}{n}$ where $m$ and $n$ are relatively prime integers, compute $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $40$.
+\end{solution}
+
+\begin{problem}
+If there are ten seats in a certain row at a movie theater, compute the number of ways that April, Bob, Cindy, and Dylan choose to sit in seats apart, assuming that there are none seated in this row when they arrive at the movie theater.
+\end{problem}
+
+\begin{solution}
+The answer is $840$.
+\end{solution}
+
+\begin{problem}
+In a triangle $ABC$, if $AB=221$, $BC=238$, $AC=255$, the angle bisector of $A$ intersects $\overline{BC}$ at point $M$, and the angle bisector of $B$ intersects $\overline{AC}$ at $N$. Let $P$ and $Q$ be perpendicular feet from $C$ to $\overline{AM}$ and $\overline{BN}$, respectively. If the ratio of $PQ$ to $AB$ can be written as $\frac{m}{n}$ for relatively prime positive integers, compute $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $21$.
+\end{solution}
+
+\begin{problem}
+The distance between the point $(1,2,3)$ and the plane $z=x+2y+3$ can be written as $\frac{m}{\sqrt{n}}$ where $m$ and $n$ are square-free integers, given that the distance between a point $(a,b,c)$ off the plane $Ax+By+Cz+D=0$ is the length of the shortest distance from the point and the plane. Compute $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $11$.
+\end{solution}
+
+\begin{problem}
+Given a square $ABCD$ whose side length is $3$, draw a diagonal $\overline{BD}$ and plot a point $E$ such that $BE:ED=2:1$. Then, there are four triangles $AEB$, $BEC$, $CED$, and $DEA$. Let $O_1$, $O_2$, $O_3$, $O_4$ be the circumcenter of respective triangles. The area of a quadrilateral $O_1O_2O_3O_4$ can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime positive integers. Compute $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $11$.
+\end{solution}
+
+\begin{problem}
+Given a square $ABCD$ whose side length is $2$, draw a diagonal $\overline{BD}$ such that a square has two adjacent right isosceles triangles $ABD$ and $CBD$. If there exists a point $P$ on a segment $\overline{AB}$ such that $\overline{DP}$ cuts the angle $\angle ADB$ such that $m\angle ADP : m \angle BDP = 1:2$, the ratio of $AP$ to $BP$ can be written as $\dfrac{\sqrt{m}-n}{p}$ where $m$, $n$, and $p$ are square-free positive integers. Compute $m+n+p$.
+\end{problem}
+
+\begin{solution}
+The answer is $6$.
+\end{solution}
