Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -675,7 +675,7 @@ The answer is $321$.
 \end{solution}
 
 \begin{problem}
-$ \circled{B} \hfill \circled {B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{B} \hfill \circled{W} \hfill \circled{B} \hfill \circled{B} \hfill \circled{B}$ shows what happens if $8$ black marbles and $3$ white marbles are to be arranged in a row. Let $p$ be the probability that every white marble are always adjacent to black marbles to their left and right. If $p=\frac{m}{n}$ where $m$ and $n$ are relatively prime integers, compute $m+n$.
+$BBWBWBBWBBB$ shows what happens if $8$ black marbles and $3$ white marbles are to be arranged in a row. Let $p$ be the probability that every white marble are always adjacent to black marbles to their left and right. If $p=\frac{m}{n}$ where $m$ and $n$ are relatively prime integers, compute $m+n$.
 \end{problem}
 
 \begin{solution}
@@ -720,4 +720,68 @@ Given a square $ABCD$ whose side length is $2$, draw a diagonal $\overline{BD}$ 
 
 \begin{solution}
 The answer is $6$.
+\end{solution}
+
+\begin{problem}
+Compute the number of non-congruent non-degenerate rectangles with integer side lengths whose area is at most $15$.
+\end{problem}
+
+\begin{solution}
+The answer is $24$.
+\end{solution}
+
+\begin{problem}
+How many $4$-digit positive integers include at least one digit of $3$, assuming that the thousand's digit can be $3$? In other words, count the number of $4$-digit integers such that at least one of the hundreds digit, tens digit or ones digit is $3$.
+\end{problem}
+
+\begin{solution}
+The answer is $2439$.
+\end{solution}
+
+\begin{problem}
+How many integers between $100$ and $999$, inclusive, contain at least one digit equal to $7$?
+\end{problem}
+
+\begin{solution}
+The answer is $252$.
+\end{solution}
+
+\begin{problem}
+Given a set of integers $\{1,2,3,4,\cdots,11\}$, compute the number of different integers that can be written as the sum of four different numbers in the given set.
+\end{problem}
+
+\begin{solution}
+The answer is $29$.
+\end{solution}
+
+\begin{problem}
+Given a set of $12$ points equally spaced around a round circle, if three distinct points are chosen out of the given points, compute the number of scalene triangles.
+\end{problem}
+
+\begin{solution}
+The answer is $168$.
+\end{solution}
+
+\begin{problem}
+There are $17$ green, $17$ blue, and $17$ yellow beads in a bag. Compute the number of beads that should be eliminated in total such that the ratio of green beads to yellow beads equals $5:6$ and the ratio of green beads to blue beads equals $2:3$.
+\end{problem}
+
+\begin{solution}
+The answer is $14$.
+\end{solution}
+
+\begin{problem}
+Compute the number of four-digit positive integers such that the product of the hundreds digit and tens digit does not exceed $4$.
+\end{problem}
+
+\begin{solution}
+The answer is $2430$.
+\end{solution}
+
+\begin{problem}
+Given a ten-digit keypad, the password must consist of five digits such that any pair of adjacent digits consists of two distinct numbers. If there are $n$ possible passwords, compute the number of positive divisors of $n$.
+\end{problem}
+
+\begin{solution}
+The answer is $36$.
 \end{solution}
