Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -785,3 +785,35 @@ Given a ten-digit keypad, the password must consist of five digits such that any
 \begin{solution}
 The answer is $36$.
 \end{solution}
+
+\begin{problem}
+If a triple of positive integers $(r,s,t)$ satisfies the following condition : $1\leq r, s, t \leq 3$, and the greatest common divisor of $r$, $s$, and $t$ is $1$, compute the number of distinct triples of $(r,s,t)$.
+\end{problem}
+
+\begin{solution}
+The answer is $25$.
+\end{solution}
+
+\begin{problem}
+In how many ways can 10 be partitioned into at most three whole numbers? Here, a whole number is a non-negative integer.
+\end{problem}
+
+\begin{solution}
+The answer is $14$.
+\end{solution}
+
+\begin{problem}
+A group of six students, riding in an elevator, noticed that there are three floors left to get off. If a different number of students must get off the elevator at each floor, with at least one student per floor, in how many ways can all students get off the elevator?
+\end{problem}
+
+\begin{solution}
+The answer is $360$.
+\end{solution}
+
+\begin{problem}
+If a group of five people must join four clubs, where there could be some club with no member, in how many ways can they join the clubs if there are only two groups with the same number of members? Here, two or more clubs with no member have the same number of members.
+\end{problem}
+
+\begin{solution}
+The answer is $780$.
+\end{solution}
